--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
-  <body>
+  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
+  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="" loading="lazy" />
+    <img class="safum-vpn-status" id="0pos2da" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="" loading="lazy" />
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
@@ -51,11 +53,18 @@
     <meta name="webspace.environment.terrain.seed" content="7" id="dhydhao" draggable="" />
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(40cm, 75cm, -2159cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad)" id="s9xzd0i" draggable="" />
     <meta name="webspace.environment.spawn_point.radius" content="0" id="dwxj6rl" draggable="" />
+    <img class="safum-vpn-status" id="hpbuh5l" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="" loading="lazy" />
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
-
+    <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d( 0,  0,  0, 0rad); ">
+      <h1>Welcome to Banki!</h1>
+    </label><label id="cccygb1" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-121cm, 320cm, -2568cm) rotate3d( 0,  0,  0, 0rad); ">
+      <h1>Grievance Addressal</h1>
+    </label>
+    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(121cm, 320cm, -2568cm) rotate3d(0,0,0,0rad); ">
+      <h1>Transactions</h1>
+    </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
-    <model id="c1nbniu" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/untitled-241893.svox" draggable="" style="transform: translate3d(66cm, 230cm, -2408cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad) scale3d(0.05, 0.05, 0.05); "></model>
-    <model id="pncelue" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/wall-848032.svox" draggable="" style="transform: translate3d(66cm, 230cm, -2408cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad) scale3d(0.05, 0.05, 0.05); "></model>
+
   </body>
 </html>
