--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
     <model id="pup1iws" type="model/vnd.svox" src="assets/wallback-75429.svox" draggable="" style="transform: translate3d(85cm, 224cm, -1900cm) rotate3d(-0.000, 1.000, 0.022, 3.113rad); "></model>
     <model id="f2gla6x" type="model/vnd.svox" src="assets/wallback-67218.svox" draggable="" style="transform: translate3d(89cm, 185cm, -1775cm) rotate3d(0.007, 0.995, 0.100, 3.276rad); "></model>
     <model id="uxvwm7f" type="model/vnd.svox" src="assets/wallback-968581.svox" draggable="" style="transform: translate3d(56cm, 222cm, -1768cm) rotate3d(0.000, 1.000, 0.026, 3.142rad); "></model>
+    <model id="latpas5" type="model/vnd.svox" src="assets/wallback-76126.svox" draggable="" style="transform: translate3d(1cm, 199cm, -2035cm) rotate3d(0.006, 0.997, 0.072, 3.317rad); "></model>
   </body>
 </html>
