--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
+  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
   <body>
-
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
@@ -59,8 +59,6 @@
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
 
-
-
-    <model id="mk6of3h" type="model/vnd.svox" src="assets/wallback-659393.svox" draggable="" style="transform: translate3d(187cm, 213cm, -1635cm) rotate3d(0.001, 0.999, 0.045, 3.189rad); "></model>
+    <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" draggable="" style="transform: translate3d(74cm, 263cm, -1827cm) rotate3d(0.001, 0.998, -0.057, 3.104rad); "></model>
   </body>
 </html>
