--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
 
+    <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" draggable="" style="transform: translate3d(-316cm, 247cm, 2552cm) rotate3d(0.024, 0.999, -0.023, 1.512rad); "></model>
   </body>
 </html>
