--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
     <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(-0.000, 1.000, 0.000, 1.571rad); "></model>
 
+    <model id="4elx3bb" type="model/vnd.svox" src="assets/walls-931522.svox" draggable="" style="transform: translate3d(572cm, 249cm, 2594cm) rotate3d(0.031, -0.999, 0.028, 1.490rad); "></model>
   </body>
 </html>
