--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
     <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(-0.000, 1.000, 0.000, 1.571rad); "></model>
 
     <model id="4elx3bb" type="model/vnd.svox" src="assets/walls-931522.svox" draggable="" style="transform: translate3d(572cm, 249cm, 2594cm) rotate3d(0.031, -0.999, 0.028, 1.490rad); "></model>
+    <model id="qobcbby" type="model/vnd.svox" src="assets/wallback-162154.svox" draggable="" style="transform: translate3d(115cm, 179cm, 2221cm) rotate3d(-0.998, -0.069, -0.008, 0.227rad); "></model>
   </body>
 </html>
