--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
     <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(-0.000, 1.000, 0.000, 1.571rad); "></model>
-
-    <model id="4elx3bb" type="model/vnd.svox" src="assets/walls-931522.svox" draggable="" style="transform: translate3d(572cm, 249cm, 2594cm) rotate3d(0.031, -0.999, 0.028, 1.490rad); "></model>
-    <model id="qobcbby" type="model/vnd.svox" src="assets/wallback-162154.svox" draggable="" style="transform: translate3d(115cm, 179cm, 2221cm) rotate3d(-0.998, -0.069, -0.008, 0.227rad); "></model>
+    <model id="ox2zlwm" type="model/vnd.svox" src="assets/walls-292157.svox" draggable="" style="transform: translate3d(538cm, 177cm, 2552cm) rotate3d(-0.121, -0.986, -0.115, 1.538rad); "></model>
+    <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" draggable="" style="transform: translate3d(-122cm, 279cm, 2468cm) rotate3d(0.000, -1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
   </body>
 </html>
