--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
-    <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); " draggable=""></model>
-    <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" draggable="" style="transform: translate3d(1057cm, 230cm, 2458cm) rotate3d(0.000, 1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
+    <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
+    <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" style="transform: translate3d(1057cm, 230cm, 2458cm) rotate3d(0.000, 1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
   </body>
 </html>
