--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
     <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
     <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" style="transform: translate3d(1057cm, 230cm, 2458cm) rotate3d(0.000, 1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
+    <model id="8vbafli" type="model/vnd.svox" src="assets/wallback-354469.svox" draggable="" style="transform: translate3d(211cm, 194cm, 2466cm) rotate3d(-0.991, -0.133, -0.011, 0.165rad); "></model>
   </body>
 </html>
