--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
     <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); " draggable=""></model>
     <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" draggable="" style="transform: translate3d(1057cm, 230cm, 2458cm) rotate3d(0.000, 1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
-    <label id="2cl4feg" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-307cm, 230cm, 2453cm) rotate3d(-0.009, 1.000, 0.009, 1.624rad); ">
+    <label id="2cl4feg" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-350cm, 413cm, 2438cm) rotate3d(-0.009, 1.000, 0.009, 1.624rad) scale3d(1.51, 1.51, 1.51); ">
       <h1>Grievance Addressal</h1>
     </label>
   </body>
