--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" draggable="" style="transform: translate3d(1057cm, 230cm, 2458cm) rotate3d(0.000, 1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
     <label id="2cl4feg" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-350cm, 413cm, 2438cm) rotate3d(-0.009, 1.000, 0.009, 1.624rad) scale3d(1.51, 1.51, 1.51); ">
       <h1>Grievance Addressal</h1>
-    </label><label id="cthomfd" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(563cm, 338cm, 2438cm) rotate3d(0.136, -0.982, 0.133, 1.565rad); ">
+    </label><label id="cthomfd" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(550cm, 400cm, 2438cm) rotate3d(-0.063, -0.996, -0.062, 1.551rad) scale3d(1.53, 1.53, 1.53); ">
       <h1>Transaction Point</h1>
     </label>
   </body>
