--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
-  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
-  <body>
+  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(84cm, 249cm, -2118cm) rotate3d(-0.013, 1.000, 0.014, 1.596rad); " loading="lazy" />
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
@@ -59,8 +58,8 @@
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
-    <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
-    <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" style="transform: translate3d(1057cm, 230cm, 2458cm) rotate3d(0.000, 1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
+    <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); " draggable=""></model>
+    <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" draggable="" style="transform: translate3d(1057cm, 230cm, 2458cm) rotate3d(0.000, 1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
     <label id="2cl4feg" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-350cm, 413cm, 2438cm) rotate3d(-0.009, 1.000, 0.009, 1.624rad) scale3d(1.51, 1.51, 1.51); ">
       <h1>Grievance Addressal</h1>
     </label><label id="cthomfd" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(588cm, 400cm, 2400cm) rotate3d(-0.063, -0.996, -0.062, 1.551rad) scale3d(1.53, 1.53, 1.53); ">
