--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="black" />
     <title>Banki Lobby</title>
     <meta name="webspace.environment.type" content="terrain" />
-    <meta name="webspace.environment.terrain.colors.ground" content="#152D01" />
+    <meta name="webspace.environment.terrain.colors.ground" content="#C2C2C2" />
     <meta name="webspace.environment.terrain.colors.edge" content="#082300" />
     <meta name="webspace.environment.terrain.colors.leaves" content="#748E08" />
     <meta name="webspace.environment.terrain.colors.bark" content="#2F2014" />
@@ -65,7 +65,7 @@
     </label><label id="cthomfd" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(588cm, 400cm, 2400cm) rotate3d(-0.063, -0.996, -0.062, 1.551rad) scale3d(1.53, 1.53, 1.53); ">
       <h1>Transaction Point</h1>
     </label>
-    <img id="as0vzdg" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(-345cm, 262cm, -1948cm) rotate3d(-0.001, -1.000, -0.001, 1.571rad) scale3d(5.11, 5.11, 5.11); " /><img id="9k9sia9" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(575cm, 275cm, -1950cm) rotate3d(0.000, 1.000, 0.000, 1.571rad) scale3d(5.11, 5.11, 5.11); " />
+    <img id="as0vzdg" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(-345cm, 262cm, -1948cm) rotate3d(-0.001, -1.000, -0.001, 1.571rad) scale3d(5.11, 5.11, 5.11); " draggable="" /><img id="9k9sia9" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(575cm, 275cm, -1950cm) rotate3d(0.000, 1.000, 0.000, 1.571rad) scale3d(5.11, 5.11, 5.11); " />
     <!-- Code injected by live-server -->
     <script id="fwnp6y5" draggable="">
       // &lt;![CDATA[  &lt;-- For SVG support
@@ -106,6 +106,7 @@
     <model id="sla75i3" type="model/vnd.svox" src="assets/wallback-261303.svox" draggable="" style="transform: translate3d(1488cm, 218cm, 2450cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
     <model id="b063qjp" type="model/vnd.svox" src="assets/wallback-374036.svox" draggable="" style="transform: translate3d(-1050cm, 232cm, 2413cm) rotate3d(0.000, -1.000, 0.000, 1.571rad); "></model>
     <model id="ce6z60g" type="model/vnd.svox" src="assets/bankhub-287276.svox" draggable="" style="transform: translate3d(113cm, 227cm, 2075cm) rotate3d(-0.555, -0.832, -0.014, 0.060rad); "></model>
-    <model id="pbto9lg" type="model/vnd.svox" src="assets/bankhub-107497.svox" draggable="" style="transform: translate3d(174cm, 302cm, 909cm) scale3d(1.07, 1.07, 1.07); "></model>
+    <model id="pbto9lg" type="model/vnd.svox" src="assets/bankhub-107497.svox" style="transform: translate3d(174cm, 302cm, 909cm) scale3d(1.07, 1.07, 1.07); "></model>
+    <model id="9auqh30" type="model/vnd.svox" src="assets/wallback-374036.svox" style="transform: translate3d(-702cm, 237cm, 1977cm) rotate3d(-0.000, 1.000, -0.000, 3.142rad); "></model><img id="4mjc58v" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" draggable="" style="transform: translate3d(-350cm, 254cm, -3168cm) rotate3d(0.002, 1.000, -0.005, 1.570rad) scale3d(4.87, 4.87, 4.87); " />
   </body>
 </html>
