--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
     <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiVy1zY2pQbVByME12Nm0wYXpEMG5zVzBLLUd0b2NtSDF4MU9kRGdKcnFOOCIsInkiOiIwakM2N2diY2F1d1B3VzB0TmI5Z2ZmRHBtS0pJRHNhNEFobkRIV0RRQ0c0IiwiaHViX2lkIjoiMjFQVjJRZUZIRnFpd2tEVCJ9" />
-    <meta name="webspace.environment.spawn_point.transform" content="translate3d(154cm, 75cm, -2044cm) rotate3d(-0.987, 0.134, 0.084, 1.130rad)" />
-    <meta name="webspace.environment.spawn_point.radius" content="10" />
   </head>
   <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
   <body>
@@ -108,6 +106,7 @@
     </script>
     <model id="sla75i3" type="model/vnd.svox" src="assets/wallback-261303.svox" draggable="" style="transform: translate3d(1488cm, 218cm, 2450cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
     <model id="b063qjp" type="model/vnd.svox" src="assets/wallback-374036.svox" draggable="" style="transform: translate3d(-1050cm, 232cm, 2413cm) rotate3d(0.000, -1.000, 0.000, 1.571rad); "></model>
+    <model id="ce6z60g" type="model/vnd.svox" src="assets/bankhub-287276.svox" draggable="" style="transform: translate3d(113cm, 227cm, 2075cm) rotate3d(-0.555, -0.832, -0.014, 0.060rad); "></model>
     <model id="pbto9lg" type="model/vnd.svox" src="assets/bankhub-107497.svox" style="transform: translate3d(174cm, 302cm, 909cm) scale3d(1.07, 1.07, 1.07); "></model>
     <model id="9auqh30" type="model/vnd.svox" src="assets/wallback-374036.svox" style="transform: translate3d(-702cm, 237cm, 1977cm) rotate3d(-0.000, 1.000, -0.000, 3.142rad); "></model><img id="4mjc58v" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(-350cm, 263cm, -3168cm) rotate3d(0.002, 1.000, -0.005, 1.570rad) scale3d(4.87, 4.87, 4.87); " /><img id="im20jaq" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(588cm, 263cm, -3175cm) rotate3d(0.000, -1.000, 0.000, 1.571rad) scale3d(4.87, 4.87, 4.87); " />
   </body>
