--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiVy1zY2pQbVByME12Nm0wYXpEMG5zVzBLLUd0b2NtSDF4MU9kRGdKcnFOOCIsInkiOiIwakM2N2diY2F1d1B3VzB0TmI5Z2ZmRHBtS0pJRHNhNEFobkRIV0RRQ0c0IiwiaHViX2lkIjoiMjFQVjJRZUZIRnFpd2tEVCJ9" />
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(154cm, 75cm, -2044cm) rotate3d(-0.987, 0.134, 0.084, 1.130rad)" />
     <meta name="webspace.environment.spawn_point.radius" content="10" />
+    <meta name="webspace.permissions.content_change_role" content="owner" />
   </head>
   <body>
     0
